--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - uses: actions/checkout@v3
@@ -40,4 +42,3 @@ jobs:
         with:
           artifacts: "target/*.jar"
           artifactContentType: application/jar
-          token: ${{ secrets.GITHUB_TOKEN }}
